create public IP address command (#229)
