# src/command_modules/azure-cli-network/azure/cli/command_modules/network/mgmt_public_ip/lib/models/__init__.py
@@ -1,0 +1,33 @@
+#pylint: skip-file
+# coding=utf-8
+# --------------------------------------------------------------------------
+# Code generated by Microsoft (R) AutoRest Code Generator 0.16.0.0
+# Changes may cause incorrect behavior and will be lost if the code is
+# regenerated.
+# --------------------------------------------------------------------------
+
+from .deployment_public_ip import DeploymentPublicIP
+from .template_link import TemplateLink
+from .parameters_link import ParametersLink
+from .provider_resource_type import ProviderResourceType
+from .provider import Provider
+from .basic_dependency import BasicDependency
+from .dependency import Dependency
+from .deployment_properties_extended import DeploymentPropertiesExtended
+from .deployment_extended import DeploymentExtended
+from .public_ip_creation_client_enums import (
+    DeploymentMode,
+)
+
+__all__ = [
+    'DeploymentPublicIP',
+    'TemplateLink',
+    'ParametersLink',
+    'ProviderResourceType',
+    'Provider',
+    'BasicDependency',
+    'Dependency',
+    'DeploymentPropertiesExtended',
+    'DeploymentExtended',
+    'DeploymentMode',
+]
